# doar-mail

./: .dockerignore  .env  .gitignore  BloomFilter.h  CMakeLists.txt  Dockerfile  Dockerfile.app  Dockerfile.client  Dockerfile.react-client  Dockerfile.server  Dockerfile.test  Dockerfile.web-server  LABEL_TESTING.md  README.md  docker-compose.yml  package-lock.json  package.json  script.sh  tash list
backup/: BloomFilter.cpp
nginx/: default.conf
src/: BinaryFileStorage.cpp  BinaryFileStorage.h  Blacklist.cpp  Blacklist.h  BloomFilter.cpp  BloomFilter.h  ConfigurableHash.cpp  ConfigurableHash.h  FileLineStorage.cpp  FileLineStorage.h  FileManager.cpp  FileManager.h  IBloomFilterStorage.cpp  IBloomFilterStorage.h  IHashFunction.h  IUrlStorage.cpp  StdHash.cpp  main.cpp
src/android_client/app/: build.gradle.kts
src/android_client/app/src/main/: AndroidManifest.xml
src/android_client/gradle/: libs.versions.toml
src/android_client/gradle/wrapper/: gradle-wrapper.properties
src/client/: Dockerfile  client.py
src/client/gmail-client/: package-lock.json  package.json
src/client/gmail-client/src/: App.css  App.js
src/client/gmail-client/src/api/: labelsApi.js
src/client/gmail-client/src/components/: DeleteLabelDialog.jsx  EditLabelDialog.jsx  LabelItem.css  LabelItem.jsx  LabelSidebar.css  LabelSidebar.jsx  Navbar.css  Navbar.jsx  NewLabelDialog.css  NewLabelDialog.jsx  SearchBar.css  SearchBar.jsx
src/core/: BinaryFileStorage.cpp  BinaryFileStorage.h  Blacklist.cpp  Blacklist.h  BloomFilter.cpp  BloomFilter.h  ConfigurableHash.cpp  ConfigurableHash.h  FileLineStorage.cpp  FileLineStorage.h  IUrlStorage.h
src/main/app/: App.cpp  App.h  app.cpp  app.h
src/main/commands/: AddURLCommand.cpp  AddURLCommand.h  Blacklist.cpp  CheckURLCommand.cpp  CheckURLCommand.h  CommandParser.cpp  CommandParser.h  ConsoleMenu.cpp  DeleteURLCommand.cpp  DeleteURLCommand.h  ICommand.h  IMenu.h  StatusMessages.h  commandParser.cpp  commandParser.h  consoleMenu.cpp  consoleMenu.h
src/react-client/: package-lock.json  package.json
src/react-client/public/: index.html
src/react-client/src/: App.css  App.js  index.css  index.js
src/react-client/src/api/: labelsApi.js  searchApi.js
src/react-client/src/components/: AdvancedSearchDialog.css  AdvancedSearchDialog.jsx  AppLayout.css  AppLayout.jsx  ComposeButton.css  ComposeButton.jsx  ComposeDialog.css  ComposeDialog.jsx  ConfirmDialog.jsx  DeleteLabelDialog.css  DeleteLabelDialog.jsx  DialogStyle.css  EditLabelDialog.css  EditLabelDialog.jsx  LabelEmailDialog.css  LabelEmailDialog.jsx  LabelItem.css  LabelItem.jsx  LabelSidebar.css  LabelSidebar.jsx  MailFoldersSidebar.css  MailFoldersSidebar.js  MailItem.css  MailItem.jsx  Navbar.css  Navbar.jsx  NewLabelDialog.css  NewLabelDialog.jsx  ProfileDetails.css  ProfileDetails.jsx  ProfileMenu.css  ProfileMenu.jsx  SearchBar.css  SearchBar.jsx  Toast.css  Toast.jsx
src/react-client/src/components/common/: ProtectedRoute.jsx  Toast.jsx
src/react-client/src/components/dialogs/: ConfirmDialog.css  ConfirmDialog.jsx  DialogStyle.css
src/react-client/src/components/labels/: DeleteLabelDialog.jsx  EditLabelDialog.css  EditLabelDialog.jsx  LabelEmailDialog.css  LabelEmailDialog.jsx  LabelItem.jsx  NewLabelDialog.jsx
src/react-client/src/components/layout/: AppLayout.jsx  LabelSidebar.jsx  MailFoldersSidebar.css  MailFoldersSidebar.js  Navbar.jsx
src/react-client/src/components/mail/: ComposeButton.jsx  ComposeDialog.css  ComposeDialog.jsx  MailItem.css  MailItem.jsx
src/react-client/src/components/profile/: ProfileDetails.jsx  ProfileMenu.css  ProfileMenu.jsx
src/react-client/src/components/search/: AdvancedSearchDialog.css
src/react-client/src/contexts/: AuthContext.js
src/react-client/src/pages/: HomePage.js
src/react-client/src/pages/Login/: LoginPage.js
src/server/: ClientSession.h  Server.cpp  Server.h  main.cpp
src/server/core/: Blacklist.cpp  BloomFilter.h  ConfigurableHash.cpp  ConfigurableHash.h  FileLineStorage.h  IBloomFilterStorage.h  IHashFunction.h
src/server/main/app/: App.cpp  App.h  ClientSession.cpp  ClientSession.h  Server.cpp  Server.h
src/server/main/commands/: AddURLCommand.cpp  AddURLCommand.h  CheckURLCommand.cpp  CheckURLCommand.h  CommandParser.h  ConsoleMenu.h  DeleteURLCommand.cpp  DeleteURLCommand.h  ICommand.h  IMenu.h
src/server/tests/bloom_hash_tests/: testHashClass.cpp
src/server/tests/commands_tests/: BlacklistTests.cpp  CommandParserTests.cpp  DeleteUrlTests.cpp
src/server/tests/flow_tests/: SetupParserTests.cpp  StatusMessagesTests.cpp
src/server/tests/server_tests/: ServerSanityTests.cpp
src/server/tests/storage_test/: black_list_storage_test.cpp  bloom_filter_storage_test.h
src/server/utils/: SetupParser.cpp  SetupParser.h  StatusMessages.cpp  Sync.cpp  Sync.h
src/tests/: testBloomFilter.cpp  testHashClass.cpp
src/tests/bloom_hash_tests/: testBloomFilter.cpp
src/tests/commands_tests/: AddURLCommandTests.cpp  CheckURLCommandTests.cpp
src/tests/flow_tests/: SetupParserTests.cpp  StatusMessagesTests.cpp
src/tests/server_tests/: ServerSanityTests.cpp
src/tests/storage_test/: CMakeLists.txt  black_list_storage_test.cpp  black_list_storage_test.h  bloom_filter_storage_test.cpp  bloom_filter_storage_test.h
src/utils/: SetupParser.cpp  StatusMessages.h
src/web_server/: app.js  package-lock.json  package.json  test-labels.js
src/web_server/controllers/: blacklistController.js  labels.js  mails.js  searchController.js  userController.js
src/web_server/models/: blacklistModel.js  labels.js  mailUserView.js  mails.js  sessions.js  userModel.js
src/web_server/routes/: blacklistRoutes.js  drafts.js  inbox.js  labels.js  mails.js  searchRoutes.js  sent.js  spam.js  starred.js  trash.js  userRoutes.js
src/web_server/services/: labelsService.js  mailsService.js  userService.js
src/web_server/utils/: authMiddleware.js  db.js  mailUtils.js  upload.js
wiki/: Backend-API.md  Data-Persistence.md  Frontend-Features.md  Getting-Started.md  Home.md  Security-&-Validation.md  System-Architecture.md
(+106 files in other folders)
